[tool.poetry]
name = "wikiteam3"
version = "4.1.4"
description = "Tools for downloading and preserving MediaWikis. We archive MediaWikis, from Wikipedia to tiniest wikis."
license = "GPL-3.0-or-later"
# authors = ["WikiTeam Contributors"] # FIXME: it's not an valid author name
authors = ["yzqzss <yzqzss@yandex.com>"]
maintainers = [
    # "saveweb wikiteam3 maintainers", #FIXME
    # "mediawiki-scarper maintainers",
    # "wikiteam maintainers",
    "yzqzss <yzqzss@yandex.com>"
]
readme = "README.md"
# homepage = "https://wiki.archiveteam.org/index.php/WikiTeam"
repository = "https://github.com/saveweb/wikiteam3"
keywords = [
    "archiveteam",
    "mediawiki",
    "preservation",
    "wiki",
    "wikipedia"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sociology :: History",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities"
]
packages = [
    { include = "wikiteam3/**/*"},
]
exclude = ["wikiteam3/dumpgenerator/test/*"]

[tool.poetry.scripts]
dumpgenerator = "wikiteam3.dumpgenerator:main_deprecated"
wikiteam3dumpgenerator = "wikiteam3.dumpgenerator:main"
wikiteam3uploader = "wikiteam3.uploader:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
internetarchive = "^3.5.0"
lxml = "^4.9.2"
mwclient = "^0.10.1"
file_read_backwards = "^3.0.0"
python-slugify = "^8.0.1"
httpx = "^0.24.1"

[tool.isort]
profile = "black"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
