[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "wikiteam3"
version = "4.3.7"
description = "Tools for downloading and preserving MediaWikis. We archive MediaWikis, from Wikipedia to tiniest wikis."
license = {text = "GPL-3.0-or-later"}
requires-python = "<4.0.0,>=3.8.1"
dependencies = [
    "requests<3.0.0,>=2.32.3",
    "internetarchive<5.0.0,>=4.1.0",
    "lxml<6.0.0,>=5.2.2",
    "mwclient<1.0.0,>=0.10.1",
    "file-read-backwards<4.0.0,>=3.1.0",
    "python-slugify<9.0.0,>=8.0.4",
]
readme = "README.md"
keywords = ["archiveteam", "mediawiki", "wikiteam", "wikiteam3", "preservation", "wiki", "wikipedia"]
classifiers = ["Environment :: Console", "Intended Audience :: Education", "Intended Audience :: End Users/Desktop", "Intended Audience :: Information Technology", "Intended Audience :: Legal Industry", "Intended Audience :: Science/Research", "Intended Audience :: System Administrators", "Natural Language :: English", "Operating System :: OS Independent", "Topic :: Communications", "Topic :: Internet", "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki", "Topic :: Scientific/Engineering :: Information Analysis", "Topic :: Sociology :: History", "Topic :: System :: Archiving", "Topic :: System :: Archiving :: Backup", "Topic :: Utilities"]
authors = [
    {name = "yzqzss", email = "yzqzss@saveweb.org"},
    {name = "emijrp"},
    {name = "nemobis"},
    {name = "randomnetcat"},
    {name = "NyaMisty"},
    {name = "PiRSquared17"},
    {name = "Hydriz"},
]
maintainers = [
    {name = "yzqzss", email = "yzqzss@saveweb.org"},
]


[project.scripts]
wikiteam3dumpgenerator = "wikiteam3.dumpgenerator:main"
wikiteam3uploader = "wikiteam3.uploader:main"

[project.urls]
repository = "https://github.com/saveweb/wikiteam3"

[tool.pdm]
[tool.pdm.build]
excludes = []
[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0.0,>=8.2.2",
    "flake8<8.0.0,>=7.1.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
